# sfml_project1

./: CMakeLists.txt  README.md
include/: animation.h  enemy.h  entity.h  multiplayerclient.h  multiplayerhost.h  multiplayermenu.h  platform.h  player.h  playerstate.h  popup.h  remoteplayer.h  singleplay.h  structure.h  wall.h
src/: animation.cpp  enemy.cpp  entity.cpp  main.cpp  multiplayerclient.cpp  multiplayerhost.cpp  multiplayermenu.cpp  platform.cpp  player.cpp  playerstate.cpp  popup.cpp  remoteplayer.cpp  singleplay.cpp  structure.cpp  wall.cpp
